trying to fix bubble transition on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,5 @@
 
 
 body {
-  background: #E0BFA0;
+  background: $tan;
 }
