--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,12 +4,11 @@
 $red: #B9302A;
 $blue: #0363B6;
 $yellow: #E8B503;
-$tan: #E0BFA0;
+$tan: #E3D4C3;
 $black: #221E1F;
 $pink: #EDCBBF;
 $teal: #2297A1;
-$orange: #E3591A;
-$orange2: #E06229;
+$orange: #E06229;
 //--------
 $green: #1EDD88;
 $gray: #0E0000;
